--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp11.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp11.html
@@ -187,7 +187,7 @@ for (int i = 0; i &lt; A.size(); i++) {
   <div class="anchor" id="t3"></div>
   <h3>Задача 3. Вывести все простые делители числа</h3>
 
-  <p>Разложить число n на простые множители. В цикле for начинаем с i=2. Будем делить число n на 2 до тех пор, пока оно делится на 2. Таким образом мы удаляем из n все делители равные 2,4,8 и т.д.Дальше i=3 и так мы удалим все простые делители из n от 2 до sqrt(n). Каждую итерацию выводим найденное простое число, пока n не станет равно 1 или не закончится цикл. Если цикл закончился, а n не равно 1, значит у нас остался еще один простой делитель и мы его тожедолжны вывести.</p>
+  <p>Разложить число n на простые множители. В цикле for начинаем с i=2. Будем делить число n на 2 до тех пор, пока оно делится на 2. Таким образом мы удаляем из n все делители равные 2,4,8 и т.д.Дальше i=3 и так мы удалим все простые делители из n от 2 до sqrt(n). Каждую итерацию выводим найденное простое число, пока n не станет равно 1 или не закончится цикл. Если цикл закончился, а n не равно 1, значит у нас остался еще один простой делитель и мы его тоже должны вывести.</p>
 
   <details>
     <summary>Решение</summary>
@@ -230,6 +230,7 @@ if (n != 1) {
 <pre>
 int n;
 cin >> n;
+
 vector&lt;int&gt;A(n + 1);
 A[0] = 1;
 A[1] = 1;
@@ -252,6 +253,7 @@ for (int i = 2; i &lt;= n; i++) {
 <pre>
 int n;
 cin >> n;
+
 vector&lt;int&gt;A(n + 1);
 vector&lt;int&gt;B;
 A[0] = 1;
@@ -305,7 +307,7 @@ for (long long i = 2; i &lt;= n; i++) {
   <p>Каждый набор тестовых данных состоит из одной строки, содержащей одно целое число, x(2≤x≤10⁹).</p>
 
   <h4>Выходные данные</h4>
-  <p>Для каждого набора тестовых данных, выведите пару целых положительных чисел a и b (1≤a,b≤10⁹)  таких, что НОД(a,b)+НОК(a,b)=x. Гарантируется, что решение всегда существует. Если существует несколько таких пар (a,b), вы можете вывести любую из них.</p>
+  <p>Для каждого набора тестовых данных, выведите пару целых положительных чисел a и b (1 ≤ a, b ≤ 10⁹)  таких, что НОД(a,b) + НОК(a,b)=x. Гарантируется, что решение всегда существует. Если существует несколько таких пар (a,b), вы можете вывести любую из них.</p>
 
   <h4>Пример</h4>
 <pre>
@@ -317,8 +319,8 @@ for (long long i = 2; i &lt;= n; i++) {
 1 1
 6 4
 </pre>
-  <p>В первом наборе тестовых данных примера,  НОД(1,1)+НОК(1,1)=1+1=2</p>
-  <p>Во втором наборе тестовых данных примера, НОД(6,4)+НОК(6,4)=2+12=14</p>
+  <p>В первом наборе тестовых данных примера,  НОД(1,1) + НОК(1,1) = 1+1=2</p>
+  <p>Во втором наборе тестовых данных примера, НОД(6,4) + НОК(6,4) = 2+12=14</p>
 
   <details>
     <summary>Решение</summary>
@@ -329,11 +331,12 @@ for (long long i = 2; i &lt;= n; i++) {
 using namespace std;
 
 int main() {
-  // ввод данных
+  // количество тестов
   int t;
   cin >> t;
 
   for (int test = 0; test &lt; t; test++) {
+    // ввод данных
     int x;
     cin >> x;
 
@@ -501,6 +504,39 @@ int main() {
   <h4>Пример</h4>
   <code>22</code>
   <code>2 11</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long a;
+  cin >> a;
+
+  // решение и вывод результата
+  long long rep = 1;
+  for (long long i = 2; i * i &lt;= a; i++) {
+    while (a % i == 0) {
+      // проверка на повторение
+      if (i != rep) {
+        rep = i;
+        cout &lt;&lt; i &lt;&lt; ' ';
+      }
+      a /= i;
+    }
+  }
+
+  // если осталось простое число
+  if (a != 1) {
+    cout &lt;&lt; a;
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -526,6 +562,76 @@ int main() {
 5 6
 </pre>
   <code>30 1</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Перебираем все возможные пары чисел в массиве, вычисляем для каждой пары НОД и НОК, обновляем максимальные значения. Это решение эффективно для ограничений задачи (n ≤ 10^3), так как количество пар составляет около 500,000, что вполне допустимо для 2 секунд.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+// Функция для вычисления НОД двух чисел (алгоритм Евклида)
+int gcd(int a, int b) {
+  while (a != 0 && b != 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+// Функция для вычисления НОК двух чисел
+int lcm(int a, int b) {
+  if (a == 0 || b == 0) {
+    return 0;
+  }
+  return (a / gcd(a, b)) * b;
+}
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;int&gt; nums(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> nums[i];
+  }
+
+  // решение
+  int max_gcd = 0;
+  int max_lcm = 0;
+
+  // Перебираем все пары чисел
+  for (int i = 0; i &lt; n; i++) {
+    for (int j = i + 1; j &lt; n; j++) {
+
+      // текущий НОД
+      int current_gcd = gcd(nums[i], nums[j]);
+
+      // обновляем максимальный НОД
+      if (current_gcd > max_gcd) {
+        max_gcd = current_gcd;
+      }
+
+      // текущий НОК
+      int current_lcm = lcm(nums[i], nums[j]);
+
+      // обновляем максимальный НОК
+      if (current_lcm > max_lcm) {
+        max_lcm = current_lcm;
+      }
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; max_lcm &lt;&lt; ' ' &lt;&lt; max_gcd;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -771,6 +877,45 @@ int main() {
   <code>5</code>
   <code>2</code>
   <p>Первообразные корни mod 5 — 2 и 3.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Первообразным корнем по модулю n (primitive root modulo n) называется такое число g, что все его степени по модулю n пробегают по всем числам, взаимно простым с n. Математически это формулируется таким образом: если g является первообразным корнем по модулю n, то для любого целого a такого, что gcd(a,n)=1, найдётся такое целое k, что g<sup>k</sup> ≡ a (mod n).</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+// Функция для вычисления НОД двух чисел (алгоритм Евклида)
+int gcd(int a, int b) {
+  while (a != 0 && b != 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+int main() {
+  // ввод данных
+  int p;  // простое число от 2 до 2000
+  cin >> p;
+
+  // решение
+  int cnt = 0; // число первообразных корней
+  for (int i = 1; i &lt; p; i++) {
+    if (gcd(p - 1, i) == 1) {
+      cnt++;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; cnt;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -797,6 +942,43 @@ int main() {
   <h4>Пример 2</h4>
   <code>-1 -2 2 4</code>
   <code>4</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>dx и dy представляют разности координат концов отрезка по осям x и y. Наибольший общий делитель dx и dy определяет, сколько промежуточных точек с целыми координатами существует между начальной и конечной точками отрезка. Количество таких точек равно cnt+1, так как включаются обе конечные точки.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;cmath&gt;
+
+using namespace std;
+
+// Функция для вычисления НОД двух чисел (алгоритм Евклида)
+int gcd(int a, int b) {
+  while (a != 0 && b != 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+int main() {
+  // ввод данных
+  int x1, y1, x2, y2;
+  cin >> x1 >> y1 >> x2 >> y2;
+
+  // решение
+  int dx = abs(x2 - x1);
+  int dy = abs(y2 - y1);
+  int cnt = gcd(dx, dy);
+
+  // вывод результата
+  cout &lt;&lt; cnt + 1;
+}
+</pre>
+  </details>
 </article>
 
 
