--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,8 +2,13 @@
 
 <ol reversed>
 
+  <li>2025.06.15 вс
+    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 170-274стр и закончить
+    <br>1. <strong>Книга</strong> <i>1988 Уэйт, Прата - Язык Си. 345стр</i> начать 1-10стр
+  </li>
+
   <li>2025.06.14 сб
-    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 150-160стр
+    <br>1. <strong>Книга</strong> <i>1988 Джехани - Программирование на языке Си 274стр</i> прочитать 150-170стр
   </li>
 
   <li>2025.06.13 пт
